Implement Driver and Routes Feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RepublicServices</string>
+
+    <string name="sort_drivers">Sort Drivers</string>
 </resources>
